--- a/app/App/Taxonomy/View/tpl/military-unit-metadata.html
+++ b/app/App/Taxonomy/View/tpl/military-unit-metadata.html
@@ -15,7 +15,7 @@
         <div class="row mt-4" ng-repeat="testator in entity._embedded.testators">
             <div class="col-md-1 pr-0">
                 <a ui-sref="transcript.app.taxonomy.view({ type: 'testators', id: testator.id })" >
-                    <img src="./web/images/default-testator.png" class="img-fluid" />
+                    <img src="/webapp/app/web/images/default-testator.png" class="img-fluid" />
                 </a>
             </div>
             <div class="col-md-10">
