--- a/app/Admin/User/View/View.html
+++ b/app/Admin/User/View/View.html
@@ -18,6 +18,7 @@
                 <label for="admin-iUser-role-manage" class="col-md-4 col-form-label text-md-right">Rôles</label>
                 <div class="col-md-8">
                     <select id="admin-iUser-role-manage" name="admin-iUser-role-manage" class="form-control form-control-sm" ng-model="iUser.roles" multiple >
+                        <option value="ROLE_VALIDATION">Accès aux transcription en validation</option>
                         <option value="ROLE_TAXONOMY_EDIT">Editeur de notices</option>
                         <option value="ROLE_MODO">Modérateur</option>
                     </select>
